<resources>
    <string name="app_name">Secure Transfer</string>
    <string name="employee_profile">Employee Profile</string>
    <string name="fill_in_details_to_generate_your_pdf">Fill in details to generate your PDF</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="national_id_nid">National ID (NID)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="emergency_contact_number">Emergency Contact Number</string>
    <string name="generate_pdf_preview">Generate PDF Preview →</string>
    <string name="your_data_is_only_used_to_generate_this_document">Your data is only used to generate this document.</string>
    <string name="full_name">Full Name</string>
    <string name="login_and_sign">Login and Sign</string>
    <string name="todo">TODO</string>

</resources>